Set additional image tags